// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel reducer handles actions - setChannelId 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": "this-is-a-test-id",
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoading 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": false,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setLoadingMessage 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "",
  "loader": Immutable.Record {
    "loading": true,
    "message": "this is a loading message",
  },
  "members": null,
}
`;

exports[`channel reducer handles actions - setShareableUri 1`] = `
Immutable.ChannelState {
  "spentFilterValue": "0",
  "id": null,
  "message": "",
  "shareableUri": "zbay.io/channel/this-is-a-hash",
  "loader": Immutable.Record {
    "loading": true,
    "message": "",
  },
  "members": null,
}
`;

exports[`channel reducer handles epics - loadChannel fetches messages 1`] = `
Immutable.List [
  Immutable.DisplayableMessage {
    "id": "test-1",
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "Unnamed",
    },
    "createdAt": 1551963828,
    "message": "This is some message test-1",
    "spent": "0.2",
    "fromYou": true,
    "status": "broadcasted",
    "error": null,
  },
  Immutable.DisplayableMessage {
    "id": "test-2",
    "type": 1,
    "sender": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "",
    },
    "receiver": Immutable.ExchangeParticipant {
      "replyTo": "",
      "username": "Unnamed",
    },
    "createdAt": 1551963828,
    "message": "This is some message test-2",
    "spent": "0.2",
    "fromYou": true,
    "status": "broadcasted",
    "error": null,
  },
]
`;

exports[`channel reducer handles epics - loadChannel sets uri 1`] = `"zbay.io/channel/eJxNizEOgCAMAL9iGkcdWF19CUqjDVKMRY0S/i4YB6dL7nIRWDuEDvpZM+NSKWhAG7OhSLa3qIASPlGXaFDGjdZAnn+bHvwe3tnilc8IdNjciUfviKf2IDwLc24VpPQAl0oo4g=="`;

exports[`channel reducer handles epics - resendMessage resend selected message 1`] = `
Immutable.Map {
  "new-op-id": Immutable.Operation {
    "opId": "new-op-id",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "message-op-id",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is some message test-1",
        "signature": Object {
          "data": Array [
            12,
            148,
            160,
            236,
            37,
            15,
            86,
            196,
            169,
            151,
            131,
            122,
            221,
            208,
            135,
            90,
            250,
            118,
            247,
            134,
            159,
            99,
            233,
            247,
            189,
            62,
            178,
            127,
            190,
            155,
            255,
            90,
            126,
            78,
            139,
            0,
            81,
            33,
            225,
            39,
            63,
            145,
            193,
            48,
            223,
            99,
            182,
            89,
            203,
            71,
            130,
            225,
            42,
            15,
            98,
            9,
            108,
            60,
            76,
            153,
            19,
            195,
            209,
            186,
          ],
          "type": "Buffer",
        },
      },
      "channelId": "",
    },
    "txId": null,
    "error": null,
    "status": "pending",
  },
}
`;

exports[`channel reducer handles epics - sendOnEnter sends message 1`] = `
Object {
  "createdAt": 1551963828,
  "message": "this is some message",
  "signature": Object {
    "data": Array [
      128,
      237,
      23,
      204,
      119,
      33,
      188,
      54,
      156,
      34,
      213,
      141,
      13,
      3,
      136,
      197,
      77,
      43,
      7,
      184,
      112,
      108,
      234,
      215,
      204,
      145,
      49,
      133,
      107,
      68,
      177,
      1,
      126,
      103,
      92,
      105,
      14,
      236,
      157,
      198,
      3,
      26,
      146,
      226,
      100,
      28,
      25,
      120,
      216,
      95,
      59,
      159,
      170,
      50,
      185,
      254,
      70,
      157,
      20,
      15,
      106,
      67,
      15,
      73,
    ],
    "type": "Buffer",
  },
  "type": 1,
}
`;

exports[`channel reducer handles epics -clearNewMessages clears new messages for current channel 1`] = `
Immutable.ChannelMessages {
  "messages": Immutable.List [
    Immutable.ReceivedMessage {
      "id": "test-1",
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is some message test-1",
      "spent": "0.2",
    },
    Immutable.ReceivedMessage {
      "id": "test-2",
      "type": 1,
      "sender": Immutable.MessageSender {
        "replyTo": "",
        "username": "",
      },
      "createdAt": 1551963828,
      "message": "This is some message test-2",
      "spent": "0.2",
    },
  ],
  "newMessages": Immutable.List [],
}
`;
